fix: resolve security hotspots in HotspotManager and ProxyManager
- Use ProcessBuilder instead of Runtime.exec
- Add MAC address validation to prevent command injection
- Explicitly bind ServerSocket to all interfaces and improve resource handling