@@ -12,11 +12,14 @@ import android.provider.Settings;
 import android.util.Log;
 
 import java.io.DataOutputStream;
+import java.io.IOException;
 import java.lang.reflect.Method;
+import java.util.regex.Pattern;
 
 public class HotspotManager {
     private static final String TAG = "HotspotManager";
     private static final String EXIT_CMD = "exit\n";
+    private static final Pattern MAC_PATTERN = Pattern.compile("^([0-9A-Fa-f]{2}[:-]){5}([0-9A-Fa-f]{2})$");
 
     private final WifiManager wifiManager;
     private final Context context;
@@ -50,7 +53,7 @@ public class HotspotManager {
 
     private boolean setHotspotEnabledRoot(boolean enabled, String ssid, String password) {
         try {
-            Process p = Runtime.getRuntime().exec("su");
+            Process p = new ProcessBuilder("su").start();
             DataOutputStream os = new DataOutputStream(p.getOutputStream());
             if (enabled) {
                 os.writeBytes("cmd tethering start-tethering 0\n");
@@ -62,7 +65,8 @@ public class HotspotManager {
             os.writeBytes(EXIT_CMD);
             os.flush();
             return true;
-        } catch (Exception e) {
+        } catch (IOException e) {
+            Log.e(TAG, "Error setting hotspot with root", e);
             return false;
         }
     }
@@ -82,6 +86,7 @@ public class HotspotManager {
             }
             return true;
         } catch (Exception e) {
+            Log.e(TAG, "Error setting hotspot with reflection", e);
             return false;
         }
     }
@@ -100,6 +105,7 @@ public class HotspotManager {
             Method method = wifiManager.getClass().getMethod("setWifiApEnabled", WifiConfiguration.class, boolean.class);
             return (Boolean) method.invoke(wifiManager, wifiConfig, enabled);
         } catch (Exception e) {
+            Log.e(TAG, "Error setting hotspot legacy", e);
             return false;
         }
     }
@@ -162,9 +168,9 @@ public class HotspotManager {
     }
 
     public void blockDevice(String mac, boolean block) {
-        if (!RootUtils.isDeviceRooted()) return;
+        if (!RootUtils.isDeviceRooted() || !isValidMac(mac)) return;
         try {
-            Process p = Runtime.getRuntime().exec("su");
+            Process p = new ProcessBuilder("su").start();
             DataOutputStream os = new DataOutputStream(p.getOutputStream());
             if (block) {
                 os.writeBytes("iptables -I FORWARD -m mac --mac-source " + mac + " -j DROP\n");
@@ -173,25 +179,27 @@ public class HotspotManager {
             }
             os.writeBytes(EXIT_CMD);
             os.flush();
-        } catch (Exception e) {
+        } catch (IOException e) {
             Log.e(TAG, "Error blocking device", e);
         }
     }
 
     public void limitSpeed(String mac, int kbps) {
-        if (!RootUtils.isDeviceRooted()) return;
-        // Simplified tc command for speed limiting
-        // mac is currently unused in this simplified global limit, but kept in signature for future specific filtering
+        if (!RootUtils.isDeviceRooted() || !isValidMac(mac) || kbps < 0) return;
         try {
-            Process p = Runtime.getRuntime().exec("su");
+            Process p = new ProcessBuilder("su").start();
             DataOutputStream os = new DataOutputStream(p.getOutputStream());
             os.writeBytes("tc qdisc add dev wlan0 root handle 1: htb default 10\n");
             os.writeBytes("tc class add dev wlan0 parent 1: classid 1:1 htb rate " + kbps + "kbps ceil " + kbps + "kbps\n");
             os.writeBytes("tc filter add dev wlan0 protocol ip parent 1:0 prio 1 u32 match ip src 0.0.0.0/0 flowid 1:1\n");
             os.writeBytes(EXIT_CMD);
             os.flush();
-        } catch (Exception e) {
+        } catch (IOException e) {
             Log.e(TAG, "Error limiting speed for " + mac, e);
         }
+    }
+
+    private boolean isValidMac(String mac) {
+        return mac != null && MAC_PATTERN.matcher(mac).matches();
     }
 }
